Ensure correct spacing on results layout
Making this change means (I think) that the header won't try to expand
beyond its natural height, so while the filters will span two columns,
the "header" cell won't try to grab space beyond what it needs.

--- a/client/common/sass/components/_incident-index.sass
+++ b/client/common/sass/components/_incident-index.sass
@@ -1,6 +1,8 @@
 .incident-index__body
 	+constrain-to-desktop
 	+grid-container
+	grid-template-rows: auto 1fr
+	align-items: start
 
 .incident-index__body-header
 	display: flex
